[package]
name = "kamu-accounts"
description = "Domain model of the accounts and permissions"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[dependencies]
internal-error = { workspace = true }
opendatafabric = { workspace = true }

async-trait = { version = "0.1", default-features = false }
chrono = { version = "0.4", default-features = false }
serde = "1"
sqlx = { version = "0.7", default_features = false}
thiserror = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
uuid = "1"

[dev-dependencies]
