[package]
name = "kamu-auth-rebac"
description = "Domain model of ReBAC"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[dependencies]
internal-error = { workspace = true }
opendatafabric = { workspace = true }

async-trait = "0.1"
thiserror = { version = "1", default-features = false }


[dev-dependencies]
