[package]
name = "kamu-core"
description = "Kamu's domain model objects and interfaces"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []

testing = ["dep:mockall"]


[dependencies]
kamu-accounts = { workspace = true }
kamu-datasets = { workspace = true }
container-runtime = { workspace = true }
messaging-outbox = { workspace = true }
internal-error = { workspace = true }
opendatafabric = { workspace = true }

async-stream = { version = "0.3", default-features = false }
async-trait = { version = "0.1", default-features = false }
bytes = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false }
dill = "0.9"
futures = { version = "0.3", default-features = false }
http = { version = "1" }
pathdiff = { version = "0.2", default-features = false }
pin-project = { version = "1", default-features = false }
thiserror = { version = "1", default-features = false }
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tracing = { version = "0.1", default-features = false }
url = { version = "2", default-features = false, features = ["serde"] }
itertools = "0.13"

# TODO: Avoid this dependency or depend on sub-crates
datafusion = { version = "42", default-features = false, features = [
    "parquet",
] }
object_store = { version = "0.11", default-features = false }

# TODO: Make serde optional
serde = { version = "1", default-features = false, features = ["derive"] }
serde_with = { version = "3", default-features = false }

# Optional
mockall = { optional = true, version = "0.13", default-features = false }


[dev-dependencies]
mockall = { version = "0.13", default-features = false }
