[package]
name = "kamu-core"
description = "Kamu's domain model objects and interfaces"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []

testing = ["dep:mockall"]
utoipa = ["dep:utoipa"]


[dependencies]
kamu-accounts = { workspace = true }
kamu-datasets = { workspace = true }
container-runtime = { workspace = true }
messaging-outbox = { workspace = true }
internal-error = { workspace = true }
opendatafabric = { workspace = true }

async-trait = { version = "0.1", default-features = false }
bytes = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false }
dill = "0.10"
futures = { version = "0.3", default-features = false }
http = { version = "1" }
pathdiff = { version = "0.2", default-features = false }
pin-project = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tracing = "0.1"
url = { version = "2", default-features = false, features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }

# TODO: Avoid this dependency or depend on sub-crates
datafusion = { version = "44", default-features = false, features = [
    "parquet",
] }
object_store = { version = "0.11", default-features = false }

# TODO: Make serde optional
serde = { version = "1", default-features = false, features = ["derive"] }
serde_with = { version = "3", default-features = false }

# Optional
mockall = { optional = true, version = "0.13", default-features = false }
utoipa = { optional = true, version = "=5.3.0", default-features = false, features = [
] }


[dev-dependencies]
mockall = { version = "0.13", default-features = false }
