[package]
name = "kamu-core"
description = "Kamu's domain model objects and interfaces"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []

testing = ["dep:mockall"]
utoipa = ["dep:utoipa"]
oso = ["dep:oso"]


[dependencies]
container-runtime = { workspace = true }
file-utils = { workspace = true }
internal-error = { workspace = true }
kamu-datasets = { workspace = true }
kamu-accounts = { workspace = true }
messaging-outbox = { workspace = true }
odf = { workspace = true, features = ["datafusion"] }

async-stream = { version = "0.3", default-features = false }
async-trait = { version = "0.1", default-features = false }
base64 = { version = "0.22", default-features = false }
bytes = "1"
cheap-clone = { version = "0.3", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", default-features = false }
dill = { version = "0.15", default-features = false }
futures = { version = "0.3", default-features = false }
pathdiff = { version = "0.2", default-features = false }
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tracing = "0.1"
url = { version = "2", default-features = false, features = ["serde"] }

# TODO: Avoid this dependency or depend on sub-crates
datafusion = { version = "50", default-features = false, features = [
    "parquet",
] }
object_store = { version = "0.12", default-features = false }

# TODO: Make serde optional
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
serde_with = { version = "3", default-features = false }

# Optional
mockall = { optional = true, version = "0.14", default-features = false }
oso = { optional = true, version = "0.27", default-features = false }
utoipa = { optional = true, version = "5", default-features = false }


[dev-dependencies]
mockall = { version = "0.14", default-features = false }
