[package]
name = "kamu-dataset-update-flow"
description = "Domain model of a dataset update flow that handles automatic and manual dataset updates"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lib]
doctest = false


[dependencies]
enum-variants = { workspace = true }
event-sourcing ={ workspace = true }
internal-error = { workspace = true }
opendatafabric = { workspace = true }
kamu-core = { workspace = true }

async-trait = { version = "0.1", default-features = false }
chrono = { version = "0.4", default-features = false }
thiserror = { version = "=1.0.44", default-features = false }  # TODO: Pinned until rustc upgrade
tokio-stream = { version = "0.1", default-features = false }
tracing = { version = "0.1", default-features = false }
url = { version = "2", default-features = false }

# TODO: Make serde optional
serde = { version = "1", default-features = false, features = ["derive"] }
serde_with = { version = "3", default-features = false }
