[package]
name = "kamu-did-secret-keys"
description = "Kamu did secret keys domain model objects and interfaces"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []

sqlx = ["dep:sqlx"]

[dependencies]
crypto-utils = { workspace = true }
internal-error = { workspace = true }
odf = { workspace = true }

async-trait = { version = "0.1", default-features = false }
bytes = "1"
chrono = { version = "0.4", default-features = false }
dill = { version = "0.13", default-features = false }
futures = { version = "0.3", default-features = false }
pathdiff = { version = "0.2", default-features = false }
strum = { version = "0.26", features = ["derive"] }
thiserror = { version = "2", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tracing = "0.1"
url = { version = "2", default-features = false, features = ["serde"] }

# TODO: Avoid this dependency or depend on sub-crates
datafusion = { version = "47", default-features = false, features = ["parquet"] }
object_store = { version = "0.12", default-features = false }

# TODO: Make serde optional
serde = { version = "1", default-features = false, features = ["derive"] }
serde_with = { version = "3", default-features = false }

# Optional
mockall = { optional = true, version = "0.13", default-features = false }
oso = { optional = true, version = "0.27", default-features = false }
utoipa = { optional = true, version = "5", default-features = false, features = [
] }
sqlx = { optional = true, version = "0.8", default-features = false, features = [
    "macros",
] }


[dev-dependencies]
mockall = { version = "0.13", default-features = false }
