[package]
name = "kamu-did-secret-keys"
description = "Kamu did secret keys domain model objects and interfaces"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []

sqlx = ["dep:sqlx"]

[dependencies]
crypto-utils = { workspace = true }
internal-error = { workspace = true }
odf = { workspace = true }

async-trait = { version = "0.1", default-features = false }
dill = { version = "0.13", default-features = false }
thiserror = { version = "2", default-features = false, features = ["std"] }

# TODO: Make serde optional
serde = { version = "1", default-features = false, features = ["derive"] }
serde_with = { version = "3", default-features = false }

# Optional
sqlx = { optional = true, version = "0.8", default-features = false, features = [
    "macros",
] }


[dev-dependencies]
